--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,12 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+# 针对 JavaScript/TypeScript 文件的特定配置
+[*.{js,ts,vue}]
+# 设置 import/export 大括号内的空格
+ij_javascript_spaces_within_imports = true
+ij_typescript_spaces_within_imports = true
+
 [*.{md,txt,log}]
 trim_trailing_whitespace = false
 max_line_length = off
