--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,8 @@ indent_size = 2
 # 设置 import/export 大括号内的空格
 ij_javascript_spaces_within_imports = true
 ij_typescript_spaces_within_imports = true
+ij_javascript_force_semicolon_style = true
+ij_typescript_force_semicolon_style = true
 
 [*.{md,txt,log}]
 trim_trailing_whitespace = false
