--- a/.editorconfig
+++ b/.editorconfig
@@ -7,13 +7,12 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,ts,jsx,tsx,vue,html,css,scss,sass,less,json,yaml,yml}]
+[*.{js,ts,jsx,mjs,cjs,tsx,mts,cts,vue,html,css,scss,sass,less,json,yaml,yml,styl}]
 indent_style = space
 indent_size = 2
+max_line_length = 160
 
-# 针对 JavaScript/TypeScript 文件的特定配置
 [*.{js,ts,vue}]
-# 设置 import/export 大括号内的空格
 ij_javascript_spaces_within_imports = true
 ij_typescript_spaces_within_imports = true
 ij_javascript_force_semicolon_style = true
