--- a/02-vue-practice/package.json
+++ b/02-vue-practice/package.json
@@ -22,6 +22,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
+    "marked": "^16.4.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
@@ -30,6 +32,7 @@
     "@prettier/plugin-oxc": "^0.0.4",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.18.6",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
