--- a/02-vue-practice/package.json
+++ b/02-vue-practice/package.json
@@ -25,6 +25,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^16.4.0",
     "pinia": "^3.0.3",
+    "sql-formatter": "^15.6.10",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
